# soulpatch-input-example

./: CMakeLists.txt  README.md  SineOsc.soul  SineOsc.soulpatch  main.cpp
